--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
             <div class="row">
                 <div class="col d-flex">
                     <!-- image -->
-                    <img src="img/01.jpg" alt="immagine numero 1">
+                    <!-- <div class="image-container active">
+                        <img src="img/01.jpg" alt="immagine numero 1">
+                    </div> -->
+                    
                     <!-- Buttons -->
                     <div class="btn btn-up fa">&#xf077;</div>
                     <div class="btn btn-down fa">&#xf078;</div>
